# STLAdapters

./: .gitignore  CMakeLists.txt  README.md
lib/: ranges.h
lib/Adapters/: Concept.h  Drop.h  Filter.h  Keys.h  Reverse.h  Take.h  Transform.h  Values.h
tests/: CMakeLists.txt  test_adapters.cpp
